Got profile page working properly.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2>Welcome back {{ user.fname, user.lname }}</h2>
+<h2>Welcome back {{ user.fname }} {{ user.lname }}</h2>
 <br>
-<h3>Here are the symptoms you are tracking:</h3>
+<h3>Here are the symptoms you are currently tracking:</h3>
 <ul>{% for symptom in symptoms %}
     <li>{{ symptom.symptom.name }}</li>
     {% endfor %}
 </ul>
 <br>
-<h3>And the treatments you're tracking:</h3>
+<h3>And the treatments you are currently tracking:</h3>
 <ul>{% for treatment in treatments %}
     <li>{{ treatment.treatment.name }}</li>
     {% endfor %}
@@ -21,6 +21,10 @@
 <p><a href="/setsymptoms">Set new symptoms to track</a></p>
 
 <p><a href="/settreatments">Set new treatments to track</a></p>
+
+<p><a href="/tracksymptoms">Add symptom inputs to your existing symptoms list</a></p>
+
+<p><a href="/tracktreatments">Add treatment inputs to your existing treatment list</a></p>
 
 
 
