got profil page to load properly, struggling with setting new symptom.

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,13 @@
 <body>
 
   <hr>
-    {% if "user_id" in session %}
+  <h6>BEEtLyme</h6>
+    <!-- {% if "logged_in" in session %}
         <a href="/logout">Logout</a>
     {% else %}
         <a href="/login">Login</a>
     {% endif %}
-
+ -->
   <hr>
 
     {% for flash in get_flashed_messages() %}
