--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,13 +18,13 @@
 <br>
 
 
-<p><a href="/setsymptoms">Set new symptoms to track</a></p>
+<p><a href="/set_symptom">Set new symptoms to track</a></p>
 
-<p><a href="/settreatments">Set new treatments to track</a></p>
+<p><a href="/set_treatment">Set new treatments to track</a></p>
 
-<p><a href="/tracksymptoms">Add symptom inputs to your existing symptoms list</a></p>
+<p><a href="/track_symptoms">Add symptom inputs to your existing symptoms list</a></p>
 
-<p><a href="/tracktreatments">Add treatment inputs to your existing treatment list</a></p>
+<p><a href="/track_treatments">Add treatment inputs to your existing treatment list</a></p>
 
 
 
