added Set Treatment feature and html page.  Tested.  Will wait on autofill feature until Sprint 2.

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
         <a href="/login">Login</a>
     {% endif %}
  -->
+    <a href="/profile">Profile</a>
+    <a href="/set_symptom">Set Symptom</a>
+    <a href="/set_treatment">Set Treatment</a>
+
   <hr>
 
     {% for flash in get_flashed_messages() %}
