--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
       <a href="/set_treatment">Set Treatment</a>
       <a href="/track_symptoms">Track Symptoms</a>
       <a href="/track_treatments">Track Treatments</a>
+      <a href="/graph_options">Graph</a>
     </p>
   <hr>
 
