--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,45 +1,76 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <script src="https://code.jquery.com/jquery.js"></script>
 <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- <script src="http://www.google.com/uds/modules/gviz/gviz-api.js"></script>
+ -->
+  <form action='/get_data'>
+    <input type='hidden' id='hidden' name='graph_options' value='{{ graph_options | tojson | safe}}'>
+  </form>
 
-  <script>
-  </script>
     <script type='text/javascript'>
       google.charts.load('current', {'packages':['annotatedtimeline']});
       google.charts.setOnLoadCallback(drawChart);
+
       function drawChart() {
-        var data = new google.visualization.DataTable();
-        data.addColumn('date', 'Date');
-        {% for symptom in graph_options %}
-        data.addColumn('number', '{{symptom}}')
-        {% endfor %}
+        var jsonData = $.ajax({
+          url: "/get_data",
+          data: {graph_options: $('#hidden').val()},
+          dataType: "json",
+          async: false
+          }).responseText;
+        debugger;
+        var data = new google.visualization.DataTable(jsonData);
+        var chart = new google.visualization.AnnotatedTimeLine(document.getElementById('chart_div'));
+        chart.draw(data, {displayAnnotations: false});
+      }
+
+      // function drawChart() {
+      //   var data = new google.visualization.DataTable();
+      //   data.addColumn('datetime', 'Date');
+      //   {% for symptom in graph_options %}
+      //   data.addColumn('number', '{{symptom}}')
+      //   {% endfor %}
         //data.addColumn('number', 'Fever');
         // data.addColumn('string', 'title1');
         // data.addColumn('string', 'text1');
         //data.addColumn('number', 'Fatigue');
         // data.addColumn('string', 'title2');
         // data.addColumn('string', 'text2');
-        data.addRows([
-          [new Date(2008, 1 ,1), 7, 6],
-          [new Date(2008, 1 ,2), 6, 6],
-          [new Date(2008, 1 ,3), 5, 7],
-          [new Date(2008, 1 ,4), 4, 7],
-          [new Date(2008, 1 ,5), 4, 6],
-          [new Date(2008, 1 ,6), 3, 7],
-          [new Date(2008, 1 ,7), 4, 8],
-          [new Date(2008, 1 ,8), 3, 7],
-          [new Date(2008, 1 ,9), 4, 6],
-          [new Date(2008, 1 ,10), 3, 7],
-          [new Date(2008, 1 ,11), 2, 6],
-          [new Date(2008, 1 ,12), 3, 6],
-          [new Date(2008, 1 ,14), 4, 7],
-          [new Date(2008, 1 ,17), 3, 8],
-        ]);
 
-        var chart = new google.visualization.AnnotatedTimeLine(document.getElementById('chart_div'));
-        chart.draw(data, {displayAnnotations: false});
-      }
+        //   [new Date(2017, 3 ,26), 7, 6],
+        //   [new Date(2017, 3 ,27), 6, 6],
+        //   [new Date(2017, 3 ,30), 5, 7],
+        //   [new Date(2017, 4 ,4), 4, 7],
+        //   [new Date(2017, 4 ,5), 4, 6],
+        //   [new Date(2017, 4 ,6), 3, 7],
+        //   [new Date(2017, 4 ,9), 4, 8],
+        //   [new Date(2017, 4 ,12), 3, 7],
+        //   [new Date(2017, 4 ,13), 4, 9],
+        //   [new Date(2017, 4 ,14), 3, 7],
+        //   [new Date(2017, 4 ,17), null, 6],
+        //   [new Date(2017, 4 ,18), 3, 6],
+        //   [new Date(2017, 4 ,21), 4, 7],
+        //   [new Date(2017, 4 ,26), 3, 8],
+        // ]);
+        // var options = {
+        // var chart: {
+        //     title: 'Symptoms over time',
+        // },
+        // axes: {
+        //     y: {
+        //         all: {
+        //             range: {
+        //                 max: 10,
+        //                 min: 0
+        //               }
+        //             }
+        //         }
+        //     }
+        //   };
+        
     </script>
 
 
