updated graph options to have y axis reflect 0 min and 10 max.

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -55,21 +55,18 @@
         //   [new Date(2017, 4 ,21), 4, 7],
         //   [new Date(2017, 4 ,26), 3, 8],
         // ]);
-        // var options = {
-        // var chart: {
-        //     title: 'Symptoms over time',
-        // },
-        // axes: {
-        //     y: {
-        //         all: {
-        //             range: {
-        //                 max: 10,
-        //                 min: 0
-        //               }
-        //             }
-        //         }
-        //     }
-        //   };
+        var options = {
+          axes: {
+            y: {
+                all: {
+                    range: {
+                        max: 10,
+                        min: 0
+                      }
+                    }
+                }
+            }
+          };
         
     </script>
 
