--- a/templates/chart.html
+++ b/templates/chart.html
@@ -21,41 +21,14 @@
           dataType: "json",
           async: false
           }).responseText;
-        debugger;
         var data = new google.visualization.DataTable(jsonData);
         var chart = new google.visualization.AnnotatedTimeLine(document.getElementById('chart_div'));
         chart.draw(data, {displayAnnotations: false});
       }
 
-      // function drawChart() {
-      //   var data = new google.visualization.DataTable();
-      //   data.addColumn('datetime', 'Date');
-      //   {% for symptom in graph_options %}
-      //   data.addColumn('number', '{{symptom}}')
-      //   {% endfor %}
-        //data.addColumn('number', 'Fever');
-        // data.addColumn('string', 'title1');
-        // data.addColumn('string', 'text1');
-        //data.addColumn('number', 'Fatigue');
-        // data.addColumn('string', 'title2');
-        // data.addColumn('string', 'text2');
-
-        //   [new Date(2017, 3 ,26), 7, 6],
-        //   [new Date(2017, 3 ,27), 6, 6],
-        //   [new Date(2017, 3 ,30), 5, 7],
-        //   [new Date(2017, 4 ,4), 4, 7],
-        //   [new Date(2017, 4 ,5), 4, 6],
-        //   [new Date(2017, 4 ,6), 3, 7],
-        //   [new Date(2017, 4 ,9), 4, 8],
-        //   [new Date(2017, 4 ,12), 3, 7],
-        //   [new Date(2017, 4 ,13), 4, 9],
-        //   [new Date(2017, 4 ,14), 3, 7],
-        //   [new Date(2017, 4 ,17), null, 6],
-        //   [new Date(2017, 4 ,18), 3, 6],
-        //   [new Date(2017, 4 ,21), 4, 7],
-        //   [new Date(2017, 4 ,26), 3, 8],
-        // ]);
         var options = {
+          title: "Symptom Intensity over Time",
+          interpolateNulls: true,
           axes: {
             y: {
                 all: {
