--- a/templates/set_symptom.html
+++ b/templates/set_symptom.html
@@ -2,13 +2,64 @@
 {% block content %}
 
 <h1>Set a new symptom to track</h1>
+<script src="https://code.jquery.com/jquery.js"></script>
+<link type='text/css' href="path/to/easy-autocomplete.css">
+<link type='text/css' href="path/to/easy-autocomplete.themes.css">
+<script src="/static/jquery.easy-autocomplete.js"></script>
 
 
+<!-- <link type='text/css' src="/static/jquery.auto-complete.css"></link>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-autocomplete/1.0.7/jquery.auto-complete.js"></script>
+<script src="/static/jquery.auto-complete.js"></script> -->
 <form action='/set_symptom' method="POST">
 
-    <input type='text' name='symptom' value='search'>
+    <input type='text' id='autocomplete' name='symptom' placeholder='search'>
     <input type='submit' value='submit'>
 
 </form>
+
+<script>
+// var options = $.ajax({
+//           url: "/auto_symptom",
+//           data: $('#autocomplete').val()
+//           async: false
+//           }).responseText;
+
+// console.log(options)
+
+$.get('/auto_symptom', function(symptoms){
+
+
+    console.log(symptoms);
+
+    var options = {data: symptoms};
+
+    $("#autocomplete").easyAutocomplete(options);
+
+})
+    
+
+// $("#autocomplete").easyAutocomplete(options);
+
+// $('#autocomplete').autoComplete({key1: 'Fever', key2: 'Fatigue', key3: 'Sweats or Chills'});
+// $('#autocomplete').autoComplete({
+//     minChars: 2,
+//     source: function(term, suggest){
+//         var choices = ['Fever', 'Sweats or Chills', 'Tremors', 'Fatigue'];
+//         var matches = [];
+//         for (i=0; i<choices.length; i++)
+//             if (~choices[i].indexOf(term)) matches.push(choices[i]);
+//         suggest(matches);
+//     }
+// });
+// $('#autocomplete').autoComplete({
+//     source: function(term, response){
+//         $.getJSON('/auto_symptom/', { q: term }, function(data){ response(data); });
+//     }
+// });
+</script>
+
+
 
 {% endblock %}
