--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<script src="https://code.jquery.com/jquery.js"></script>
+
 <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!-- <script src="http://www.google.com/uds/modules/gviz/gviz-api.js"></script>
- -->
-  <form action='/get_data'>
+
+  <form action='/graph_data'>
     <input type='hidden' id='hidden' name='graph_options' value='{{ graph_options | tojson | safe}}'>
   </form>
 
