plotly graph demo working but without my data.  Helper functions done, working on getting my data to show in graph.

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -15,7 +15,7 @@
 
       function drawChart() {
         var jsonData = $.ajax({
-          url: "/get_data",
+          url: "/graph_data",
           data: {graph_options: $('#hidden').val()},
           dataType: "json",
           async: false
