--- a/templates/chart_2.html
+++ b/templates/chart_2.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<form action='/graph_data'>
+    
+    <input type='hidden' id='hidden' name='graph_options' value='{{ graph_options | tojson | safe }}'>
+    
+  </form>
+
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <div id="myDiv"></div>
 <script>
@@ -9,11 +15,19 @@ Plotly.d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/finance-
   return rows.map(function(row) { return row[key]; });
 }
 
+
+// var jsonData = $.ajax({
+//           url: "/graph_data",
+//           data: {graph_options: $('#hidden').val()},
+//           dataType: "json",
+//           async: false
+//           }).responseText;
   
 var trace1 = {
   type: "scatter",
   mode: "lines",
   name: 'Symptom 1',
+  line: {'shape': 'linear'},
   x: unpack(rows, 'Date'),
   y: unpack(rows, 'AAPL.High'),
   line: {color: '#17BECF'}
@@ -29,12 +43,16 @@ var trace2 = {
 }
 
 var data = [trace1,trace2];
-    
+
+
+// var data = JSON.parse(jsonData).data
+// console.log(data)
+
 var layout = {
   title: 'Symptoms over Time', 
   xaxis: {
     autorange: true, 
-    range: ['2015-02-17', '2017-02-16'], 
+    range: ['2015-02-17', '2017-10-9'], 
     rangeselector: {buttons: [
         {
           count: 1, 
@@ -56,7 +74,7 @@ var layout = {
         }, 
         {step: 'all'}
       ]}, 
-    rangeslider: {range: ['2015-02-17', '2017-02-16']}, 
+    rangeslider: {range: ['2015-02-17', '2017-10-9']}, 
     type: 'date'
   }, 
   yaxis: {
