Have plotly graph plotting treatment on second Y axis.  May want to see if I can reset the range for that manually, but data is graphing correctly.  Now looking at how to add moonphase to graph.

--- a/templates/chart_2.html
+++ b/templates/chart_2.html
@@ -80,9 +80,17 @@ var layout = {
     type: 'date'
   }, 
   yaxis: {
+    title: 'Sx Intensity',
     autorange: true, 
     range: [0, 16], 
     type: 'linear'
+  },
+  yaxis2: {
+    title: 'Tx dosage',
+    titlefont: {color: 'rgb(148, 103, 189)'},
+    tickfont: {color: 'rgb(148, 103, 189)'},
+    side: 'right',
+    overlaying: 'y'
   }
 };
 
