--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Welcome to BeetLyme</h1>
+<h1>Welcome to BEEtLyme</h1>
 
-<h2>Allowing those treating Lyme disease to easily track symptoms and treatments</h2>
+<h2>Allowing those treating Lyme disease to easily track symptoms and treatments, and get visual feedback about the efficacy of treatments.</h2>
 
 <h4>New to the page?</h4>
 <p><a href="/register">Register</a></p>
