--- a/templates/graph_options.html
+++ b/templates/graph_options.html
@@ -15,7 +15,7 @@
     {% for treatment in treatment_options %}
     <li>{{ treatment.treatment.name }} <input type=checkbox name='treatment' value="{{ treatment.treatment.name }}"></li>
     {% endfor %}
-    <input type='submit' value='submit'>
+    <input type='submit' class="btn btn-default" value='submit'>
 
 </form>
 
