--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,9 @@
 
 <form action='/login' method="POST">
 
-    <input type='text' name='email' value='email'>
-    <input type='text' name='password' value='password'>
-    <input type='submit' value='login'>
+    <input type='text' name='email' placeholder='email' required>
+    <input type='text' name='password' placeholder='password' required>
+    <input type='submit' class="btn btn-default" value='login'>
 
 </form>
 
