--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -7,11 +7,11 @@
 <h1>Register!</h1>
 
 <form action='/register' id='register' method="POST">
-    <input type='text' id='fname' name='fname' placeholder='First Name'>
-    <input type='text' id='lname' name='lname' placeholder='Last Name'>
-    <input type='text' id='email' name='email' placeholder='email'>
-    <input type='text' id='password' name='password' placeholder='password'>
-    <input type='submit' value='register'>
+    <input type='text' id='fname' name='fname' placeholder='First Name' required>
+    <input type='text' id='lname' name='lname' placeholder='Last Name' required>
+    <input type='text' id='email' name='email' placeholder='email' required>
+    <input type='text' id='password' name='password' placeholder='password' required>
+    <input type='submit' class="btn btn-default" value='register'>
 
 </form>
 <script>
