--- a/templates/set_symptom.html
+++ b/templates/set_symptom.html
@@ -10,8 +10,8 @@
 
 <form action='/set_symptom' method="POST">
 
-    <input type='text' id='autocomplete' name='symptom' placeholder='search'>
-    <input type='submit' value='submit'>
+    <input type='text' id='autocomplete' name='symptom' placeholder='search' required>
+    <input type='submit' class="btn btn-default" value='submit'>
 
 </form>
 
