--- a/templates/set_treatment.html
+++ b/templates/set_treatment.html
@@ -10,8 +10,8 @@
 
 <form action='/set_treatment' method="POST">
 
-    <input type='text' id='autocomplete' name='treatment' placeholder='search'>
-    <input type='submit' value='submit'>
+    <input type='text' id='autocomplete' name='treatment' placeholder='search' required>
+    <input type='submit' class="btn btn-default" value='submit'>
 
 </form>
 <script>
