--- a/templates/track_treatments.html
+++ b/templates/track_treatments.html
@@ -11,7 +11,7 @@
     <li>{{ treatment.treatment.name }} :<input type='text' name='{{ treatment.treatment.name }}'></li>
     {% endfor %}
     </ul>
-    <input type='submit' value='submit'>
+    <input type='submit' class="btn btn-default" value='submit'>
 </form>
 
 {% endblock %}
