Combined set symptom and set treatment pages into one and successfully made ajax calls to send data to app routes.  Updated some html for input validation on forms and minor bootstrap changes for better layout.

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav_text"><a href="/set_treatment">Set Treatment</a></li>
-        <li class="nav_text"><a href="/set_symptom">Set Symptom</a></li>
+        <li class="nav_text"><a href="/set">Set</a></li>
         <li class="nav_text"><a href="/track">Track</a></li>
         <li class="nav_text"><a href="/graph_options">Graph</a></li>
 
@@ -77,4 +76,7 @@
   </style>
 
 </body>
+<footer class="container-fluid text-center">
+<!--   <p>BEEtLyme v.0.1 2017, produced by Anna Liisa Moter</p>
+ --></footer>
 </html>
