--- a/templates/graph_options.html
+++ b/templates/graph_options.html
@@ -1,24 +1,35 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="row">
+  <div class="col-xs-1"></div>
+  <div class="col-xs-10">
+    <h3>Graphing options.</h3>
+    <h4>  Choose up to three symptoms and one treatment to graph over time.</h4>
 
-<h3>Graphing options.</h3>
-<h4>  Choose up to three symptoms and one treatment to graph over time.</h4>
 <!-- Add constraint in on JS side -->
+  <div class="col-xs-1"></div>
+</div>
 
-
-<form action='/graph_options' method="POST">
-    <ul>
-    {% for symptom in symptom_options %}
-    <li>{{ symptom.symptom.name }} <input type=checkbox name='symptom' value="{{ symptom.symptom.name }}"></li>
-    {% endfor %}
-    </ul>
-    {% for treatment in treatment_options %}
-    <li>{{ treatment.treatment.name }} <input type=checkbox name='treatment' value="{{ treatment.treatment.name }}"></li>
-    {% endfor %}
-    <input type='submit' class="btn btn-default" value='submit'>
-
-</form>
-
+<div class="row">
+  <div class="col-xs-2"></div>
+  <div class="col-xs-9">
+    <form action='/graph_options' method="POST">
+        <h4>Symptoms</h4>
+        <ul>
+          {% for symptom in symptom_options %}
+          <li>{{ symptom.symptom.name }} <input type=checkbox name='symptom' value="{{ symptom.symptom.name }}"></li>
+          {% endfor %}
+        </ul>
+        <h4>Treatments</h4>
+        <ul>
+          {% for treatment in treatment_options %}
+          <li>{{ treatment.treatment.name }} <input type=checkbox name='treatment' value="{{ treatment.treatment.name }}"></li>
+          {% endfor %}
+        </ul>
+        <input type='submit' class="btn btn-default" value='submit'>
+    </form>
+  <div class="col-xs-1"></div>
+</div>
 
 
 {% endblock %}
