--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="row">
+  <div class="col-xs-2"></div>
+  <div class="col-xs-8">
+    <h2>User Login</h2>
 
-<h1>LOGIN!</h1>
+    <form action='/login' method="POST">
 
-<form action='/login' method="POST">
+      <input type='text' name='email' placeholder='email' required>
+      <input type='text' name='password' placeholder='password' required>
+      <input type='submit' class="btn btn-default" value='login'>
 
-    <input type='text' name='email' placeholder='email' required>
-    <input type='text' name='password' placeholder='password' required>
-    <input type='submit' class="btn btn-default" value='login'>
-
-</form>
+    </form>
+  <div class="col-xs-2"></div>
+</div>
 
 {% endblock %}
