--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -3,17 +3,22 @@
 <script language=”javascript” type=”text/javascript” src=”http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js”></script>
 
 
+<div class="row">
+  <div class="col-xs-2"></div>
+  <div class="col-xs-8">
+    <h1>New User Reistration</h1>
 
-<h1>Register!</h1>
+      <form action='/register' id='register' method="POST">
+          <input type='text' id='fname' name='fname' placeholder='First Name' required>
+          <input type='text' id='lname' name='lname' placeholder='Last Name' required>
+          <input type='text' id='email' name='email' placeholder='email' required>
+          <input type='text' id='password' name='password' placeholder='password' required>
+          <input type='submit' class="btn btn-default" value='register'>
 
-<form action='/register' id='register' method="POST">
-    <input type='text' id='fname' name='fname' placeholder='First Name' required>
-    <input type='text' id='lname' name='lname' placeholder='Last Name' required>
-    <input type='text' id='email' name='email' placeholder='email' required>
-    <input type='text' id='password' name='password' placeholder='password' required>
-    <input type='submit' class="btn btn-default" value='register'>
+      </form>  
+  <div class="col-xs-2"></div>
+</div>
 
-</form>
 <script>
 $(function() {
    $( “#register” ).validate({
