--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
       }
   </style>
 
-}
+
     </style>
 </head>
 
@@ -38,7 +38,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" id="brandname" href="#">BEEtLyme</a>
+      <a class="navbar-brand" id="brandname" href="/">BEEtLyme</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
