--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,31 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h2>Welcome back {{ user.fname }} {{ user.lname }}</h2>
-<br>
-<h3>Here are the symptoms you are currently tracking:</h3>
-<ul>{% for symptom in symptoms %}
-    <li>{{ symptom.symptom.name }}</li>
-    {% endfor %}
-</ul>
-<br>
-<h3>And the treatments you are currently tracking:</h3>
-<ul>{% for treatment in treatments %}
-    <li>{{ treatment.treatment.name }}</li>
-    {% endfor %}
-</ul>
-<br>
-<br>
-
-
-<p><a href="/set_symptom">Set new symptoms to track</a></p>
-
-<p><a href="/set_treatment">Set new treatments to track</a></p>
-
-<p><a href="/track_symptoms">Add symptom inputs to your existing symptoms list</a></p>
-
-<p><a href="/track_treatments">Add treatment inputs to your existing treatment list</a></p>
-
-
+<div class="row">
+  <div class="col-xs-2"></div>
+  <div class="col-xs-9">
+    <h2>Welcome back {{ user.fname }} {{ user.lname }}</h2>
+    <br>
+    <h3>Here are the symptoms you are currently tracking:</h3>
+        <ul>{% for symptom in symptoms %}
+        <li>{{ symptom.symptom.name }}</li>
+        {% endfor %}
+        </ul>
+        <br>
+    <h3>And the treatments you are currently tracking:</h3>
+        <ul>{% for treatment in treatments %}
+        <li>{{ treatment.treatment.name }}</li>
+        {% endfor %}
+        </ul>
+  </div>
+  <div class="col-xs-2"></div>
+</div>
 
 {% endblock %}
