--- a/templates/set.html
+++ b/templates/set.html
@@ -1,31 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h2>Set a new symptom or treatment to track</h2>
-<h4>Select from the autocomplete options or set your own unique value to track.</h4>
-
 <link type='text/css' href="path/to/easy-autocomplete.css">
 <link type='text/css' href="path/to/easy-autocomplete.themes.css">
 <script src="/static/jquery.easy-autocomplete.js"></script>
 
 <div class="row">
-  <div class="col-xs-6">
-    <form method="POST">
+  <div class="col-xs-1"></div>
+  <div class="col-xs-10">
+    <h2>Set a new symptom or treatment to track</h2>
+    <h4>Select from the autocomplete options or set your own unique value to track.</h4>
+  <div class="col-xs-1"></div>
+</div>
+<br>
+<br>
 
+<div class="row">
+  <div class="col-xs-2"></div>
+  <div class="col-xs-4">
+    <form name='symptom' method="POST">
+    <label for="symptom">Choose Symptom to track:</label>
     <input type='text' id='autosymptom' name='symptom' placeholder='search' required>
     <button id='submit-symp' class="btn btn-default">Submit</button>
 
     </form>
   </div>
 
-  <div class="col-xs-6">
-    <form method="POST">
-
+  <div class="col-xs-4">
+    <form name="treatment" method="POST">
+    <label for="treatment">Choose Treatment to track:</label>
     <input type='text' id='autotreatment' name='treatment' placeholder='search' required>
     <button id='submit-treat' class="btn btn-default">Submit</button>
 
     </form>
   </div>
+  <div class="col-xs-2"></div>
 </div>
 
 <script>
