--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 <body>
    <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+   
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -41,7 +41,6 @@
       <a class="navbar-brand" id="brandname" href="/">BEEtLyme</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="nav_text"><a href="/">About<span class="sr-only">(current)</span></a></li>
@@ -56,8 +55,8 @@
         <li class="nav_text"><a href="/graph_options">Graph</a></li>
 
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
     {% for flash in get_flashed_messages() %}
