Finished flask untitesting.  At 99% coverage for server.py, helper.py and model.py.  Excluded seed.py because it won't be used to deploy, only used for fake db.

--- a/templates/track.html
+++ b/templates/track.html
@@ -55,6 +55,12 @@ label{margin-left: 20px;}
 </div>
 <div class="row">
     <div class="col-xs-2"></div>
+    <div class="col-xs-9"><p>Note on inputting tracking values: You may use the calendar above to backfill tracking data. In order for the graph to display correctly, only one value can be input per calendar date.  Therefore, if you re-enter values for a date for which you have already entered values, the values will be overwritten to reflect your most recent inputs.</p>
+        </div>
+    <div class="col-xs-1"></div>
+</div>
+<div class="row">
+    <div class="col-xs-2"></div>
     <div class="col-xs-8">
       <label for="comment">Journal Entry (optional):</label>
       <textarea class="form-control" name='comment' rows="5" id="comment"></textarea>
